  * translation improvements in the TAL interpreter
    Changed: wc/webgui/simpletal/simpleTAL.py
  * translatable rule title and description
    Changed: wc/filter/rules/*.py, wc/__init__.py, config/filter.dtd,
      config/*.{zap,py}
  * added a rating update service to the filter update page
    Changed: wc/filter/Rating.py, wc/update.py,
      templates/classic/update.html

2.8 (released 15.1.2004)
  * removed old webcleanerconf gui and wcheaders tool; the preferred way
    to configure webcleaner is over the web interface.
    Removed: wc/gui/*, webcleanerconf*, wcheaders*
    Changed: setup.py, MANIFEST.in, debian/control, debian/rules
  * remove own daemon functions in favor of daemontools on Unix/Linux
    and NT services on windows.
    Removed: wc/daemon/*.py
    Changed: webcleaner, wc/__init__.py, wc/proxy/__init__.py
    Added: wc/win32start.py
  * added separate administrator user/password for the configuration
    interface
    Changed: wc/__init__.py, wc/proxy/HttpClient.py,
      wc/proxy/ClientServerMatchmaker.py, wc/webgui/config_html.py,
      templates/classic/config.html, FAQ
  * disable the proxy until an administrator password was given.
    Changed: wc/proxy/HttpClient.py
    Added: templates/classic/adminpass.html,
      wc/webgui/context/adminpass_html.py
  * added rating config interface
    Added: templates/classic/rating.html, wc/webgui/context/rating_html.py
  * updated magic database to newest upstream
    Changed: config/magic.mime
  * added dhcp nameserver config support on windows dns resolver
    Changed: wc/proxy/dns_lookups.py
  * import everything from _winreg in windows registry wrapper
    Changed: wc/proxy/winreg.py
  * fixed and documented the windows installation procedure
    Changed: INSTALL, setup.py
  * added note nedding zlib support for python
    Changed: INSTALL
    Closes: SF #869424
  * added help for the web gui
    Added: templates/classic/help.html, wc/webgui/context/help_html.py